@@ -41,15 +41,18 @@ namespace spatial
 {
   template<dimension_type Rank, typename Key,
 	   typename Compare = bracket_less<Key>,
+	   typename BalancingPolicy = loose_balancing,
 	   typename Alloc = std::allocator<Key> >
   struct pointset
-    : details::Kdtree<details::Static_rank<Rank>, Key, Compare, Alloc, true>
+    : details::Relaxed_kdtree<details::Static_rank<Rank>, Key, Compare,
+			      BalancingPolicy, Alloc, true>
   {
-    typedef pointset<Rank, Key, Compare, Alloc> mapping_iterable;
+    typedef pointset<Rank, Key, Compare, BalancingPolicy, Alloc>
+    mapping_iterable;
 
   private:
-    typedef details::Kdtree<details::Static_rank<Rank>,
-			    Key, Compare, Alloc, true>   base_type;
+    typedef details::Relaxed_kdtree<details::Static_rank<Rank>, Key, Compare,
+				    BalancingPolicy, Alloc, true>   base_type;
 
   public:
     pointset() { }
@@ -58,34 +61,46 @@ namespace spatial
       : base_type(details::Static_rank<Rank>())
     { }
 
-    pointset(const Compare& compare, const Alloc& alloc)
-      : base_type(details::Static_rank<Rank>(), compare, alloc)
+    pointset(const Compare& compare, const BalancingPolicy& balancing)
+      : base_type(details::Static_rank<Rank>(), compare, balancing)
     { }
 
-    pointset(const pointset& other, bool balancing = false)
-      : base_type(other, balancing)
+    pointset(const Compare& compare, const BalancingPolicy& balancing,
+	     const Alloc& alloc)
+      : base_type(details::Static_rank<Rank>(), compare, balancing, alloc)
+    { }
+
+    pointset(const pointset& other)
+      : base_type(other)
     { }
 
     pointset&
     operator=(const pointset& other)
     {
-      base_type::operator=(other);
+      return static_cast<pointset<Rank, Key, Compare, BalancingPolicy, Alloc>&>
+	(base_type::operator=(other));
     }
   };
 
   /**
-   *  @brief  This specialization allows one to specify the dimension for the
-   *  point set at run time.
+   *  Specialization for pointset with runtime rank support. The rank of the
+   *  pointset can be determined at run time and does not need to be fixed at
+   *  compile time.
    */
-  template<typename Key, typename Compare, typename Alloc>
-  struct pointset<0, Key, Compare, Alloc>
-    : details::Kdtree<details::Dynamic_rank, Key, Compare, Alloc, true>
+  template<typename Key,
+	   typename Compare,
+	   typename BalancingPolicy,
+	   typename Alloc>
+  struct pointset<0, Key, Compare, BalancingPolicy, Alloc>
+    : details::Relaxed_kdtree<details::Dynamic_rank, Key, Compare,
+			      BalancingPolicy, Alloc, true>
   {
-    typedef pointset<0, Key, Compare, Alloc>  mapping_iterable;
+    typedef pointset<0, Key, Compare, BalancingPolicy, Alloc>
+    mapping_iterable;
 
   private:
-    typedef details::Kdtree<details::Dynamic_rank,
-			    Key, Compare, Alloc, true> base_type;
+    typedef details::Relaxed_kdtree<details::Dynamic_rank, Key, Compare,
+				    BalancingPolicy, Alloc, true> base_type;
 
   public:
     pointset() { }
@@ -98,22 +113,188 @@ namespace spatial
       : base_type(details::Dynamic_rank(dim), compare)
     { }
 
+    pointset(dimension_type dim, const Compare& compare,
+		     const BalancingPolicy& policy)
+      : base_type(details::Dynamic_rank(dim), compare, policy)
+    { }
+
+    pointset(dimension_type dim, const Compare& compare,
+		     const BalancingPolicy& policy, const Alloc& alloc)
+      : base_type(details::Dynamic_rank(dim), compare, policy, alloc)
+    { }
+
     explicit pointset(const Compare& compare)
-      : base_type(compare)
+      : base_type(details::Dynamic_rank(), compare)
     { }
 
-    pointset(dimension_type dim, const Compare& compare, const Alloc& alloc)
-      : base_type(details::Dynamic_rank(dim), compare, alloc)
+    pointset(const Compare& compare, const BalancingPolicy& policy)
+      : base_type(details::Dynamic_rank(), compare, policy)
     { }
 
-    pointset(const pointset& other, bool balancing = false)
-      : base_type(other, balancing)
+    pointset(const Compare& compare, const BalancingPolicy& policy,
+		     const Alloc& alloc)
+      : base_type(details::Dynamic_rank(), compare, policy, alloc)
+    { }
+
+    pointset(const pointset& other)
+      : base_type(other)
     { }
 
     pointset&
     operator=(const pointset& other)
     {
-      base_type::operator=(other);
+      return static_cast<pointset<0, Key, Compare, BalancingPolicy, Alloc>&>
+	(base_type::operator=(other));
+    }
+  };
+
+  /**
+   *  @brief  pointset with runtime rank support. The rank of the pointset can
+   *  be determined at run time and does not need to be fixed at compile time.
+   */
+  template<typename Key,
+	   typename Compare = bracket_less<Key>,
+	   typename BalancingPolicy = loose_balancing,
+	   typename Alloc = std::allocator<Key> >
+  struct runtime_pointset
+    : details::Relaxed_kdtree<details::Dynamic_rank, Key, Compare,
+			      BalancingPolicy, Alloc, true>
+  {
+    typedef runtime_pointset<Key, Compare, BalancingPolicy, Alloc>
+    mapping_iterable;
+
+  private:
+    typedef details::Relaxed_kdtree<details::Dynamic_rank, Key, Compare,
+				    BalancingPolicy, Alloc, true> base_type;
+
+  public:
+    runtime_pointset() { }
+
+    explicit runtime_pointset(dimension_type dim)
+      : base_type(details::Dynamic_rank(dim))
+    { }
+
+    runtime_pointset(dimension_type dim, const Compare& compare)
+      : base_type(details::Dynamic_rank(dim), compare)
+    { }
+
+    runtime_pointset(dimension_type dim, const Compare& compare,
+		     const BalancingPolicy& policy)
+      : base_type(details::Dynamic_rank(dim), compare, policy)
+    { }
+
+    runtime_pointset(dimension_type dim, const Compare& compare,
+		     const BalancingPolicy& policy, const Alloc& alloc)
+      : base_type(details::Dynamic_rank(dim), compare, policy, alloc)
+    { }
+
+    explicit runtime_pointset(const Compare& compare)
+      : base_type(details::Dynamic_rank(), compare)
+    { }
+
+    runtime_pointset(const Compare& compare, const BalancingPolicy& policy)
+      : base_type(details::Dynamic_rank(), compare, policy)
+    { }
+
+    runtime_pointset(const Compare& compare, const BalancingPolicy& policy,
+		     const Alloc& alloc)
+      : base_type(details::Dynamic_rank(), compare, policy, alloc)
+    { }
+
+    runtime_pointset(const runtime_pointset& other)
+      : base_type(other)
+    { }
+
+    runtime_pointset&
+    operator=(const runtime_pointset& other)
+    {
+      return static_cast<runtime_pointset<Key, Compare, BalancingPolicy, Alloc>&>
+	(base_type::operator=(other));
+    }
+  };
+
+  template<dimension_type Rank, typename Key,
+	   typename Compare = bracket_less<Key>,
+	   typename Alloc = std::allocator<Key> >
+  struct frozen_pointset
+    : details::Kdtree<details::Static_rank<Rank>, Key, Compare, Alloc, true>
+  {
+    typedef frozen_pointset<Rank, Key, Compare, Alloc> mapping_iterable;
+
+  private:
+    typedef details::Kdtree<details::Static_rank<Rank>, Key, Compare,
+			    Alloc, true>   base_type;
+
+  public:
+    frozen_pointset() { }
+
+    explicit frozen_pointset(const Compare& compare)
+      : base_type(details::Static_rank<Rank>())
+    { }
+
+    frozen_pointset(const Compare& compare, const Alloc& alloc)
+      : base_type(details::Static_rank<Rank>(), compare, alloc)
+    { }
+
+    frozen_pointset(const frozen_pointset& other, bool balancing = false)
+      : base_type(other, balancing)
+    { }
+
+    frozen_pointset&
+    operator=(const frozen_pointset& other)
+    {
+      return static_cast<frozen_pointset<Rank, Key, Compare, Alloc>&>
+	(base_type::operator=(other));
+    }
+  };
+
+  /**
+   *  @brief  This specialization allows one to specify the dimension for the
+   *  point set at run time.
+   */
+  template<typename Key, typename Compare, typename Alloc>
+  struct frozen_pointset<0, Key, Compare, Alloc>
+    : details::Kdtree<details::Dynamic_rank, Key, Compare, Alloc, true>
+  {
+    typedef frozen_pointset<0, Key, Compare, Alloc>  mapping_iterable;
+
+  private:
+    typedef details::Kdtree<details::Dynamic_rank,
+			    Key, Compare, Alloc, true> base_type;
+
+  public:
+    frozen_pointset() { }
+
+    explicit frozen_pointset(dimension_type dim)
+      : base_type(details::Dynamic_rank(dim))
+    { }
+
+    frozen_pointset(dimension_type dim, const Compare& compare)
+      : base_type(details::Dynamic_rank(dim), compare)
+    { }
+
+    explicit frozen_pointset(const Compare& compare)
+      : base_type(compare)
+    { }
+
+    frozen_pointset(dimension_type dim, const Compare& compare,
+		    const Alloc& alloc)
+      : base_type(details::Dynamic_rank(dim), compare, alloc)
+    { }
+
+    frozen_pointset(const Compare& compare, const Alloc& alloc)
+      : base_type(details::Dynamic_rank(), compare, alloc)
+    { }
+
+    frozen_pointset(const frozen_pointset& other, bool balancing = false)
+      : base_type(other, balancing)
+    { }
+
+    frozen_pointset&
+    operator=(const frozen_pointset& other)
+    {
+      return static_cast<frozen_pointset<0, Key, Compare, Alloc>&>
+	(base_type::operator=(other));
     }
   };
 
@@ -124,44 +305,49 @@ namespace spatial
   template<typename Key,
 	   typename Compare = bracket_less<Key>,
 	   typename Alloc = std::allocator<Key> >
-  struct dynamic_pointset
+  struct frozen_runtime_pointset
     : details::Kdtree<details::Dynamic_rank, Key, Compare, Alloc, true>
   {
-    typedef dynamic_pointset<Key, Compare, Alloc> mapping_iterable;
+    typedef frozen_runtime_pointset<Key, Compare, Alloc> mapping_iterable;
 
   private:
     typedef details::Kdtree<details::Dynamic_rank,
 			    Key, Compare, Alloc, true>     base_type;
 
   public:
-    dynamic_pointset() { }
+    frozen_runtime_pointset() { }
 
-    explicit dynamic_pointset(dimension_type dim)
+    explicit frozen_runtime_pointset(dimension_type dim)
       : base_type(details::Dynamic_rank(dim))
     { }
 
-    dynamic_pointset(dimension_type dim, const Compare& compare)
+    frozen_runtime_pointset(dimension_type dim, const Compare& compare)
       : base_type(details::Dynamic_rank(dim), compare)
     { }
 
-    explicit dynamic_pointset(const Compare& compare)
+    explicit frozen_runtime_pointset(const Compare& compare)
       : base_type(compare)
     { }
 
-    dynamic_pointset(dimension_type dim, const Compare& compare,
-		     const Alloc& alloc)
+    frozen_runtime_pointset(dimension_type dim, const Compare& compare,
+			    const Alloc& alloc)
       : base_type(details::Dynamic_rank(dim), compare, alloc)
     { }
 
-    dynamic_pointset(const dynamic_pointset& other,
-		     bool balancing = false)
+    frozen_runtime_pointset(const Compare& compare, const Alloc& alloc)
+      : base_type(details::Dynamic_rank(), compare, alloc)
+    { }
+
+    frozen_runtime_pointset(const frozen_runtime_pointset& other,
+			    bool balancing = false)
       : base_type(other, balancing)
     { }
 
-    dynamic_pointset&
-    operator=(const dynamic_pointset& other)
+    frozen_runtime_pointset&
+    operator=(const frozen_runtime_pointset& other)
     {
-      base_type::operator=(other);
+      return static_cast<frozen_runtime_pointset<Key, Compare, Alloc>&>
+	(base_type::operator=(other));
     }
   };
 
